[gd_scene load_steps=30 format=3 uid="uid://hlpd5bjmqiwk"]

[ext_resource type="PackedScene" uid="uid://cj6bda8y1k831" path="res://CustomComponents/health_component.tscn" id="1_1jvnx"]
[ext_resource type="Script" path="res://Scripts/player_character.gd" id="1_64xnh"]
[ext_resource type="Texture2D" uid="uid://cudjykfkea80j" path="res://icon.svg" id="1_niawy"]
[ext_resource type="PackedScene" uid="uid://cuad5o64p42de" path="res://CustomComponents/hurt_box_component.tscn" id="2_ywnae"]
[ext_resource type="PackedScene" uid="uid://d0u057ptfmdxl" path="res://CustomComponents/attack_component.tscn" id="3_hm7q6"]
[ext_resource type="PackedScene" uid="uid://laivrmt2olyg" path="res://CustomComponents/hit_box_component.tscn" id="4_oswv2"]
[ext_resource type="Script" path="res://Scripts/hero_attack_animation.gd" id="6_kkaox"]
[ext_resource type="Script" path="res://CustomComponents/hit_box_component.gd" id="7_ctyau"]
[ext_resource type="Theme" uid="uid://lk60rpu5lxfr" path="res://core_theme.tres" id="8_g5nkn"]
[ext_resource type="Script" path="res://Scripts/hero_2_skill_animation_main.gd" id="8_msvj6"]
[ext_resource type="Script" path="res://Scripts/HSlider.gd" id="9_ic7l6"]
[ext_resource type="Script" path="res://Scripts/attack_2_polygon.gd" id="9_l2kwb"]
[ext_resource type="PackedScene" uid="uid://cg5holg485hji" path="res://CustomComponents/regeneration_component.tscn" id="10_kwqux"]
[ext_resource type="PackedScene" uid="uid://bselw8ieny17t" path="res://CustomComponents/pathfinding_logic.tscn" id="12_khadm"]
[ext_resource type="Texture2D" uid="uid://c7umwl5ntmus" path="res://Assets/EntitySprite/hero.png" id="13_hc4di"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inrhm"]
size = Vector2(128, 130)

[sub_resource type="CircleShape2D" id="CircleShape2D_wrykn"]
radius = 277.545

[sub_resource type="CircleShape2D" id="CircleShape2D_hl1oo"]
radius = 25.1794

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f3e6l"]
radius = 30.0
height = 60.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e7nec"]
atlas = ExtResource("13_hc4di")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjuaq"]
atlas = ExtResource("13_hc4di")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8fvo"]
atlas = ExtResource("13_hc4di")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5omk"]
atlas = ExtResource("13_hc4di")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjd6c"]
atlas = ExtResource("13_hc4di")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffrjn"]
atlas = ExtResource("13_hc4di")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1c4t"]
atlas = ExtResource("13_hc4di")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvpd4"]
atlas = ExtResource("13_hc4di")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgse0"]
atlas = ExtResource("13_hc4di")
region = Rect2(384, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_4efhn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7nec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjuaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8fvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5omk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjd6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffrjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1c4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvpd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgse0")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="PlayerCharacter" type="CharacterBody2D"]
collision_layer = 9
collision_mask = 8
motion_mode = 1
script = ExtResource("1_64xnh")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hp_bar") instance=ExtResource("1_1jvnx")]
max_health = 200
hp_bar = NodePath("../HPbar")

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_ywnae")]
collision_layer = 1
collision_mask = 1
health_component = NodePath("../HealthComponent")

[node name="HurtBoxShape" type="CollisionShape2D" parent="HurtBoxComponent"]
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_inrhm")

[node name="Attacks" type="Node2D" parent="."]

[node name="Attack1Component" parent="Attacks" node_paths=PackedStringArray("hitbox") instance=ExtResource("3_hm7q6")]
delay = 5.0
hit_window = 0.2
hitbox = NodePath("../HitBox1Component")

[node name="HitBox1Component" parent="Attacks" node_paths=PackedStringArray("attack_component", "hit_animation_object") instance=ExtResource("4_oswv2")]
collision_layer = 2
collision_mask = 0
damage = 5.0
attack_component = NodePath("../Attack1Component")
hit_animation_object = NodePath("HeroAttackAnimation")
knockback = 10.0

[node name="HitBoxShape" type="CollisionShape2D" parent="Attacks/HitBox1Component"]
scale = Vector2(0.4, 0.4)
shape = SubResource("CircleShape2D_wrykn")
disabled = true

[node name="HeroAttackAnimation" type="Polygon2D" parent="Attacks/HitBox1Component"]
position = Vector2(-0.0562502, 0)
scale = Vector2(0.888, 0.919)
color = Color(0.211765, 0.611765, 1, 0)
polygon = PackedVector2Array(-5, 119, -16, 32, -75, 89, -37, 15, -120, -3, -39, -26, -84, -81, -22, -38, -1, -119, 12, -40, 74, -90, 32, -15, 121, 2, 36, 24, 84, 76, 23, 38)
script = ExtResource("6_kkaox")

[node name="Attack2Component" parent="Attacks" node_paths=PackedStringArray("hitbox") instance=ExtResource("3_hm7q6")]
delay = 0.5
hit_window = 1.0
hitbox = NodePath("../HitBox2Component")

[node name="HitBox2Component" type="Area2D" parent="Attacks" node_paths=PackedStringArray("attack_component", "hit_animation_object")]
scale = Vector2(2.02, 2.02)
script = ExtResource("7_ctyau")
damage = 10.0
attack_component = NodePath("../Attack2Component")
hit_animation_object = NodePath("Animation")

[node name="HitBox1Shape" type="CollisionShape2D" parent="Attacks/HitBox2Component"]
position = Vector2(150, 0)
shape = SubResource("CircleShape2D_hl1oo")

[node name="HitBox1Shape2" type="CollisionShape2D" parent="Attacks/HitBox2Component"]
position = Vector2(-150, 0)
shape = SubResource("CircleShape2D_hl1oo")

[node name="HitBox1Shape3" type="CollisionShape2D" parent="Attacks/HitBox2Component"]
position = Vector2(0, -150)
shape = SubResource("CircleShape2D_hl1oo")

[node name="HitBox1Shape4" type="CollisionShape2D" parent="Attacks/HitBox2Component"]
position = Vector2(0, 150)
shape = SubResource("CircleShape2D_hl1oo")

[node name="Animation" type="Node2D" parent="Attacks/HitBox2Component"]
script = ExtResource("8_msvj6")

[node name="Shapes" type="Node2D" parent="Attacks/HitBox2Component"]

[node name="Attack2Polygon" type="Polygon2D" parent="Attacks/HitBox2Component/Shapes"]
position = Vector2(125, 0)
scale = Vector2(0.56, 0.56)
color = Color(0.184314, 1, 1, 0)
polygon = PackedVector2Array(4, -4, 8, -17, 16, -27, 28, -37, 45, -41, 57, -36, 69, -31, 77, -21, 82, -9, 84, 2, 78, 17, 71, 28, 59, 36, 44, 41, 27, 36, 15, 26, 7, 10)
script = ExtResource("9_l2kwb")

[node name="Attack2Polygon2" type="Polygon2D" parent="Attacks/HitBox2Component/Shapes"]
position = Vector2(0, 125)
rotation = 1.5708
scale = Vector2(0.56, 0.56)
color = Color(0.184314, 1, 1, 0)
polygon = PackedVector2Array(4, -4, 8, -17, 16, -27, 28, -37, 45, -41, 57, -36, 69, -31, 77, -21, 82, -9, 84, 2, 78, 17, 71, 28, 59, 36, 44, 41, 27, 36, 15, 26, 7, 10)
script = ExtResource("9_l2kwb")

[node name="Attack2Polygon3" type="Polygon2D" parent="Attacks/HitBox2Component/Shapes"]
position = Vector2(-125, 0)
rotation = 3.14159
scale = Vector2(0.56, 0.56)
color = Color(0.184314, 1, 1, 0)
polygon = PackedVector2Array(4, -4, 8, -17, 16, -27, 28, -37, 45, -41, 57, -36, 69, -31, 77, -21, 82, -9, 84, 2, 78, 17, 71, 28, 59, 36, 44, 41, 27, 36, 15, 26, 7, 10)
script = ExtResource("9_l2kwb")

[node name="Attack2Polygon4" type="Polygon2D" parent="Attacks/HitBox2Component/Shapes"]
position = Vector2(0, -125)
rotation = 4.71239
scale = Vector2(0.56, 0.56)
color = Color(0.184314, 1, 1, 0)
polygon = PackedVector2Array(4, -4, 8, -17, 16, -27, 28, -37, 45, -41, 57, -36, 69, -31, 77, -21, 82, -9, 84, 2, 78, 17, 71, 28, 59, 36, 44, 41, 27, 36, 15, 26, 7, 10)
script = ExtResource("9_l2kwb")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
scale = Vector2(0.4, 0.4)
shape = SubResource("CapsuleShape2D_f3e6l")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_niawy")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="HPbar" type="HSlider" parent="."]
offset_left = -66.0
offset_top = -57.0
offset_right = 55.0
offset_bottom = -41.0
theme = ExtResource("8_g5nkn")
value = 50.0
editable = false
scrollable = false
tick_count = 1
script = ExtResource("9_ic7l6")

[node name="RegenerationComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("10_kwqux")]
regen_cycle_span = 0.29
regen_amount = 15.0
health_component = NodePath("../HealthComponent")

[node name="Label" type="Label" parent="."]
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = -24.0
text = "Player 2012"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = 35.0
offset_right = 33.0
offset_bottom = 58.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Text" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Уровень:"

[node name="LevelText" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "1
"

[node name="PathfindingLogic" parent="." instance=ExtResource("12_khadm")]
position = Vector2(310.059, -322.774)

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 1.141
autostart = true

[node name="MainSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.482353, 0, 1)
sprite_frames = SubResource("SpriteFrames_4efhn")
frame = 8
frame_progress = 0.285195
offset = Vector2(1.225, 0)

[connection signal="hp_changed" from="HealthComponent" to="HealthComponent" method="_on_hp_changed"]
[connection signal="hp_changed" from="HealthComponent" to="HPbar" method="_on_health_component_hp_changed"]
[connection signal="on_death" from="HealthComponent" to="." method="_on_death"]
[connection signal="on_health_decrease" from="HealthComponent" to="." method="_on_health_component_on_health_decrease"]
[connection signal="attack_finished" from="Attacks/Attack1Component" to="." method="_on_attack_1_component_attack_finished"]
[connection signal="attack_finished" from="Attacks/Attack2Component" to="." method="_on_attack_2_component_attack_finished"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
